[package]
name = "decoder"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
description = "A decoder library for your types"
repository = "https://github.com/hecrj/decoder"

[features]
json = ["serde_json"]

[dependencies]
decoder_value.workspace = true
serde.workspace = true
indexmap.workspace = true

serde_json.workspace = true
serde_json.optional = true

[workspace]
members = ["value"]

[workspace.dependencies]
decoder_value.version = "0.0.1"
decoder_value.path = "value"

serde = "1"
serde_json = "1"
ordered-float = "4"
indexmap = "2"

[dev-dependencies]
decoder = { path = ".", features = ["json"] }
