[package]
name = "decoder"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
description = "A decoder library for your types"
repository = "https://github.com/hecrj/decoder"

[dependencies]
decoder_value.workspace = true
serde.workspace = true
indexmap.workspace = true

[workspace]
members = ["value"]

[workspace.dependencies]
decoder_value.version = "0.0.1"
decoder_value.path = "value"

serde = "1"
ordered-float = "4"
indexmap = "2"

[dev-dependencies]
serde_json = "1"
