[package]
name = "decoder"
version = "0.0.3"
edition = "2024"
license = "MIT"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
description = "A decoder library for your types"
repository = "https://github.com/hecrj/decoder"

[dependencies]
decoder_value.workspace = true
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true

[workspace]
members = ["value"]

[workspace.dependencies]
decoder_value.version = "0.0.3"
decoder_value.path = "value"

serde = "1"
ordered-float = "4"
indexmap = "2"
thiserror = "1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
