[package]
name = "decoder_value"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
description = "A generic decoder value"
repository = "https://github.com/hecrj/decoder"

[dependencies]
serde.workspace = true
ordered-float.workspace = true

indexmap.workspace = true
indexmap.features = ["serde"]
